fix issue by setting z-index=10 to page view-functions

--- a/Resources/Private/Less/components/controls.less
+++ b/Resources/Private/Less/components/controls.less
@@ -17,6 +17,7 @@
         position: absolute;
         text-align: center;
         .text-hide();
+        z-index: 10;
         > li {
             position: relative;
             display: inline-block;
